--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^8.2.0"
   },
   "dependencies": {
+    "express": "^4.18.3",
     "react-scroll": "^1.9.0",
     "typewriter-effect": "^2.21.0"
   }
